@@ -1,0 +1,4 @@
+1|GEOMETRYCOLLECTION(POLYGON((5 5,6 0,7 9,5 5)))
+2|GEOMETRYCOLLECTION(POLYGON((5 5,6 0,8 9,5 5)),POLYGON((5 5,8 9,7 9,5 5)))
+3|GEOMETRYCOLLECTION(POLYGON((5 5,6 0,7 9,5 5)))
+4|MULTILINESTRING((5 5,7 9),(5 5,6 0),(6 0,7 9))
